# Linqpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: linqpp.hpp
tests/: CMakeLists.txt
tests/src/: core.test.cpp
